added error page

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
     background-size: cover;
     background-position: center;
     height: 100vh;
-   width:1600px;
+   width: full;
     background-repeat: no-repeat;
   padding: 40;
   color: white;
